--- a/roles/0x00.md
+++ b/roles/0x00.md
@@ -1,3 +1,5 @@
+Какие эксперты должны участвовать в разработке высокопроизводительной, масштабируемой, отказоустойчивой, промышленной in-memory реляционной СУБД для ERP системы 
+
 Список **ключевых ролей и экспертиз**, разбитый по уровням:
 
 ---
