--- a/roles/0x01.md
+++ b/roles/0x01.md
@@ -1,1 +1,27 @@
-
+| Роль                                                       | Что делает                                                              |
+| ---------------------------------------------------------- | ----------------------------------------------------------------------- |
+| **Архитектор СУБД**
+| **Эксперт по in-memory системам**
+| **Эксперт по С/С++ низкоуровневому коду**                  | Работа с аллокаторами, структурами, кешами                              |
+| **Эксперт по СУБД/движкам (ex: PostgreSQL, VoltDB, HANA)** | Понимание моделей MVCC, WAL, B+tree, row/column store                   |
+| **Эксперт по управлению памятью**         | Разрабатывает собственные аллокаторы (arena, slab, pool), memory reuse |
+| **Разработчик системных структур данных** | B+-деревья, индексы, bitmap'ы, hash-table'ы, bloom-фильтры             |
+| **Инженер по отказоустойчивости**         | Разработка snapshot'ов, checkpoint'ов, failover и recovery             |
+| **Разработчик MVCC / concurrency control** | Реализация snapshot isolation, lock-free структур, сериализации               |
+| **Инженер по транзакциям**                 | Проектирует систему транзакций (ACID, journaling, undo/redo, write-ahead log) |
+| **Эксперт по многопоточности (pthreads)**  | Работа с thread pools, context switching, deadlock detection                  |
+| **Разработчик парсера SQL**                           | Парсинг, AST, error recovery                                    |
+| **Разработчик планировщика запросов (query planner)** | Оптимизация выполнения: cost-based планирование, выбор индексов |
+| **Разработчик интерпретатора / JIT**                  | Выполнение плана, bytecode, register-based execution engine     |
+| **Эксперт по безопасности БД**         | Аудит, шифрование, контроль доступа, защита от SQL-инъекций |
+| **Разработчик системы прав / ролей**   | ACL, users/roles, GRANT/REVOKE                              |
+| **Инженер по управлению схемой (DDL)** | Поддержка CREATE/ALTER/DROP, транзакционность DDL           |
+| **DevOps инженер СУБД**                      | CI/CD, контейнеризация (Docker/K8s), управление кластерами |
+| **Инженер по наблюдаемости (observability)** | Метрики, трассировка, логирование, алерты                  |
+| **Инженер отказоустойчивости (HA/DR)**       | Репликация, кластеризация, failover, geo-replication       |
+| **Инженер по производительности (perf tuning)** | Профилирование, кэш-эффективность, SIMD, NUMA-aware                        |
+| **Специалист по системной отладке**             | gdb, valgrind, perf, systemtap                                             |
+| **Эксперт по тестированию СУБД**                | Property-based testing, race condition detection, нагрузочное тестирование |
+| **Архитектор ERP-систем**         | Требования ERP-класса: бизнес-логика, консистентность, отчётность   |
+| **Инженер по интеграции**         | Связь с другими системами: BI, ETL, REST, SAP                       |
+| **Эксперт по SQL API / клиентам** | Поддержка протоколов (Postgres wire protocol, JDBC/ODBC, REST/JSON) |
