--- a/Conclusions/0x04.md
+++ b/Conclusions/0x04.md
@@ -1,1 +1,52 @@
+🧵 **Эксперт №4 — Эксперт по многопоточности (pthreads)**
 
+---
+
+### 🎯 Область аудита:
+
+* Безопасность параллелизма: mutexes, spinlocks, atomics
+* Стратегии многопоточности: worker-pool, task queue, event loop
+* NUMA-affinity, thread pinning
+* Deadlock avoidance, lock contention
+* Параллельность в query execution, WAL, GC
+
+---
+
+### ✅ Что хорошо реализовано в `sap_hana_architecture_19.puml`:
+
+| Компонент                                         | Комментарий                                                  |
+| ------------------------------------------------- | ------------------------------------------------------------ |
+| `concurrency_engine`                              | Есть базовый компонент управления параллелизмом              |
+| `sql_executor`, `jit_engine`, `plan_cache`        | Архитектура позволяет векторное и параллельное исполнение    |
+| `txn_manager`, `mvcc_engine`, `snapshot_manager`  | Потенциальная многоверсионность — требует потокобезопасности |
+| `buffer_pool`, `compression_engine`, `etl_engine` | Подразумевают фоновую и конкурентную работу                  |
+
+---
+
+### ⚠️ Обнаруженные проблемы и ограничения:
+
+| Проблема                                            | Обоснование                                                         |
+| --------------------------------------------------- | ------------------------------------------------------------------- |
+| ❌ Нет `thread_pool_manager`                         | Нет центрального диспетчера worker-потоков                          |
+| ❌ Не описан `task_scheduler`                        | Пул задач, отложенное выполнение, async event loop не представлены  |
+| ❌ Отсутствуют `lock_manager`, `spinlock_controller` | Нет видимой координации блокировок между потоками                   |
+| ❌ Нет `affinity_planner`                            | Нет планирования на уровне NUMA-aware CPU binding                   |
+| ❌ `concurrency_engine` не имеет входящих связей     | Не используется в `sql_executor`, `txn_manager`, `etl_engine` и др. |
+
+---
+
+### 💯 Оценка: **75 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `thread_pool_manager`** — управляет рабочими потоками: accept, query, background
+2. **Ввести `task_scheduler`** — отложенные задачи: GC, snapshot eviction, async jobs
+3. **Добавить `lock_manager` и `spinlock_control`** — централизованное управление локами
+4. **Добавить `affinity_planner`** — NUMA-aware распределение потоков, pinning
+5. **Связать `concurrency_engine` с `sql_executor`, `wal_writer`, `etl_engine`, `analytics_engine`**
+
+---
+
+🧵 **Заключение:** Архитектура пригодна для многопоточности, но не демонстрирует явных механизмов управления потоками, блокировками и заданиями.
