--- a/Conclusions/0x03.md
+++ b/Conclusions/0x03.md
@@ -1,52 +1,52 @@
-🔥 **Эксперт №2 — Эксперт по in-memory системам**
+🛠️ **Эксперт №3 — Эксперт по СУБД/движкам (PostgreSQL, VoltDB, HANA)**
 
 ---
 
-### 📊 Аудит архитектуры `sap_hana_architecture_19.puml` с позиции In-Memory систем
+### 🎯 Область аудита:
 
-#### 🔍 Зона ответственности:
-
-* Полный in-memory execution
-* NUMA-awareness, prefetch, CPU locality
-* Tiered storage (hot/cold, SSD fallback)
-* Управление плотностью хранения, сжатием, eviction
-* Memory layout: Arrow, PAX, RLE, Delta и др.
+* Сравнение с промышленными движками (SAP HANA, PostgreSQL, VoltDB, DuckDB)
+* Архитектурная полнота ядра: `Parser → Planner → Optimizer → Executor → Storage`
+* Журналирование (WAL), MVCC, Recovery, Query Pipeline
+* Поддержка OLTP + OLAP, HTAP
 
 ---
 
-### ✅ Найдено в архитектуре:
+### ✅ Что сделано хорошо в `sap_hana_architecture_19.puml`:
 
-| Компонент                            | Комментарий                                                     |
-| ------------------------------------ | --------------------------------------------------------------- |
-| `memory_allocator`                   | Присутствует, помечен как <<NUMA-aware>> — это ✅                |
-| `buffer_pool`, `page_cache`          | Присутствуют, описаны с `LRU/ARC`, есть `cold_storage_fallback` |
-| `column_store`, `row_store`          | Есть, архитектура поддерживает гибридную схему                  |
-| `arrow_layout`, `for_encoding`       | Присутствуют — это очень важно для layout-aware execution       |
-| `ttl_eviction`, `compression_engine` | Поддержка вытеснения и компрессии — заявлена                    |
-
----
-
-### ⚠️ Недостатки:
-
-| Проблема                                      | Обоснование                                                           |
-| --------------------------------------------- | --------------------------------------------------------------------- |
-| ❌ Нет `hot/cold data manager`                 | Автоматическое разделение по горячим/холодным данным не описано       |
-| ❌ Нет `in-memory snapshot manager`            | Поддержка copy-on-write и snapshot-архитектуры неявная                |
-| ❌ Не раскрыт `vectorized decompression`       | Нет блока или связи с execution engine от `compression_engine`        |
-| ❌ Нет `memory monitor`                        | Отсутствует контроль распределения памяти на уровне allocator/runtime |
-| ❌ Нет `prefetcher` или `CPU-affinity planner` | Не реализована NUMA-aware планировка / разметка потоков               |
+| Компонент                                                    | Комментарий                                    |
+| ------------------------------------------------------------ | ---------------------------------------------- |
+| `sql_parser`, `sql_planner`, `sql_optimizer`, `sql_executor` | Есть полноценный пайплайн SQL                  |
+| `plan_cache`, `jit_engine`, `analytics_engine`               | Наличие JIT и планов исполнения — мощно        |
+| `column_store`, `row_store`, `json_store`                    | Поддержка гибридного хранения                  |
+| `mvcc_engine`, `snapshot_manager`, `recovery_service`        | Поддержка snapshot isolation и crash recovery  |
+| `materialized_views`, `ttl_eviction`, `buffer_pool`          | OLAP-функциональность, eviction, HTAP признаки |
 
 ---
 
-### 💯 Оценка: **85 / 100**
+### ⚠️ Обнаруженные проблемы и недочёты:
+
+| Проблема                                            | Обоснование                                                             |
+| --------------------------------------------------- | ----------------------------------------------------------------------- |
+| ❌ Отсутствует `WAL writer` как самостоятельный блок | SAP HANA, PostgreSQL, VoltDB — строго выделяют WAL в отдельный сервис   |
+| ❌ Нет `txn_log_replayer` или `wal_recovery`         | Не описано, как лог используется при рестарте                           |
+| ❌ Нет `query_pipeline_engine`                       | Планировщик и исполнитель существуют, но нет единого runtime dispatcher |
+| ❌ Нет `adaptive planner` / feedback loop            | Современные СУБД пересчитывают планы после исполнения                   |
+| ❌ Отсутствует `expression evaluator`                | Нет блока для вычисления выражений/функций вне SQL Executor             |
 
 ---
 
-### 🔧 Рекомендации:
+### 💯 Оценка: **82 / 100**
 
-1. **Добавить `hot_cold_data_manager`** — отвечает за auto-tiering, TTL, SSD fallback
-2. **Добавить `snapshot_memory_controller`** — реализует in-memory snapshots для MVCC и backup
-3. **Ввести `memory_monitor`** — трекинг потребления памяти, контроль квот
-4. **Добавить `prefetch_controller`** — для предзагрузки блоков на уровне CPU/cache line
-5. **Связать `compression_engine` с `sql_executor`** — поддержка векторной декомпрессии
+---
 
+### 🔧 Рекомендации по улучшению:
+
+1. **Добавить блок `wal_writer`** — dedicated writer, flush, group commit
+2. **Ввести `wal_replay_engine`** — поддержка instant recovery и bootstrap
+3. **Добавить `query_pipeline_engine`** — централизованное управление исполнением
+4. **Внедрить `adaptive_planner`** — пересчёт плана по статистике и времени выполнения
+5. **Добавить `expression_evaluator`** — внеплановая обработка выражений, UDF, WHERE
+
+---
+
+🛠️ **Заключение:** Архитектура ядра зрелая, но требует усиления WAL, recovery pipeline и адаптивного исполнения, чтобы соответствовать уровням VoltDB и HANA.
