--- a/Conclusions/0x05.md
+++ b/Conclusions/0x05.md
@@ -1,1 +1,53 @@
+💾 **Эксперт №5 — Эксперт по управлению памятью**
 
+---
+
+### 🎯 Область аудита:
+
+* Аллокаторы: arena-based, slab, bump, NUMA-aware
+* Контроль утечек, fragmentation, COW
+* Prefetch, cache coloring, L1/L2/TLB locality
+* Memory quota enforcement
+* Tiered memory (hot/cold, SSD fallback)
+
+---
+
+### ✅ Найдено в архитектуре `sap_hana_architecture_19.puml`:
+
+| Компонент                   | Комментарий                                                             |
+| --------------------------- | ----------------------------------------------------------------------- |
+| `memory_allocator`          | Заявлен как NUMA-aware, что критично для in-memory нагрузок             |
+| `buffer_pool`, `page_cache` | Учитывают поведение при eviction и повторной загрузке из tiered storage |
+| `cold_storage_fallback`     | Прямо отражает fallback с tier-0 DRAM на tier-1 SSD                     |
+| `compression_engine`        | Опосредованно влияет на объём аллоцированной памяти                     |
+| `quota_manager`             | Контроль ограничений — присутствует, но используется слабо              |
+
+---
+
+### ⚠️ Обнаруженные проблемы:
+
+| Проблема                                                                | Обоснование                                                               |
+| ----------------------------------------------------------------------- | ------------------------------------------------------------------------- |
+| ❌ Нет `memory_tracker`                                                  | Не хватает runtime трекинга по категориям (sessions, tables, buffers)     |
+| ❌ Нет `slab_allocator` или `arena_allocator`                            | Не указано, используется ли высокоэффективная схема выделения             |
+| ❌ `quota_manager` не связан ни с `buffer_pool`, ни с `memory_allocator` | Его действие не видно                                                     |
+| ❌ Нет `fragmentation_monitor`                                           | В in-memory системах критично отслеживать внутреннюю/внешнюю фрагментацию |
+| ❌ Нет `TLB/cache_stats_collector`                                       | Отсутствует блок наблюдаемости по locality и кэш-промахам                 |
+
+---
+
+### 💯 Оценка: **78 / 100**
+
+---
+
+### 🔧 Рекомендации по улучшению:
+
+1. **Добавить `memory_tracker`** — агрегирует потребление по компонентам и сессиям
+2. **Ввести `slab_allocator` или `arena_allocator`** — более эффективная стратегия распределения
+3. **Связать `quota_manager` с `memory_allocator`, `buffer_pool`, `txn_manager`**
+4. **Добавить `fragmentation_monitor`** — визуализация и сбор метрик
+5. **Добавить `cache_affinity_profiler` / `TLB_miss_monitor`** — улучшит low-level perf
+
+---
+
+💾 **Заключение:** Архитектура памяти соответствует уровню SAP HANA, но требует усиления через трекинг, профилирование, slab/arena-аллокаторы и связи с квотами.
