--- a/Conclusions/0x06.md
+++ b/Conclusions/0x06.md
@@ -1,1 +1,54 @@
+🧬 **Эксперт №6 — Разработчик MVCC и Concurrency Control**
+
+---
+
+### 🎯 Область анализа:
+
+* MVCC (Multi-Version Concurrency Control) с compressed chains
+* Snapshot Isolation
+* TxID visibility rules
+* Фоновая очистка (`vacuum`, GC)
+* Интеграция с `txn_manager`, `buffer_pool`, `table_engine`
+
+---
+
+### ✅ Присутствующие MVCC-компоненты в `sap_hana_architecture_19.puml`:
+
+| Компонент          | Комментарий                                              |
+| ------------------ | -------------------------------------------------------- |
+| `mvcc_engine`      | Центральный блок — явно выделен, хорошая практика        |
+| `snapshot_manager` | Есть модуль для управления снимками — 👍                 |
+| `txn_manager`      | Управление транзакциями на уровне идентификаторов — TxID |
+| `vacuum_engine`    | Есть блок, отвечающий за удаление старых версий          |
+| `recovery_service` | Логически покрывает восстановление MVCC-цепочек          |
+
+---
+
+### ⚠️ Недостатки и слабые места:
+
+| Проблема                                       | Обоснование                                                         |
+| ---------------------------------------------- | ------------------------------------------------------------------- |
+| ❌ `mvcc_engine` не имеет связи с `buffer_pool` | Отсутствие прямой связи мешает оптимизации чтения видимых версий    |
+| ❌ Нет `tx_visibility_checker`                  | Логика видимости версий (TxID vs Snapshot) не представлена как блок |
+| ❌ Нет `compressed_chain_manager`               | Поддержка компрессии MVCC-цепочек не выделена                       |
+| ❌ `vacuum_engine` не связан с `table_engine`   | Непонятно, как версии удаляются из таблиц                           |
+| ❌ Отсутствует `undo_log_manager`               | Важно для rollback и point-in-time восстановления                   |
+
+---
+
+### 💯 Оценка: **83 / 100**
+
+---
+
+### 🔧 Рекомендации по улучшению:
+
+1. **Добавить `tx_visibility_checker`** — проверка видимости строки на основе TxID + snapshot
+2. **Добавить `compressed_chain_manager`** — оптимизация цепочек версий в памяти
+3. **Ввести `undo_log_manager`** — обеспечение rollbacks и savepoints
+4. **Связать `mvcc_engine` ↔ `buffer_pool`, `table_engine`** — согласование записи и удаления
+5. **Связать `vacuum_engine` с `storage_layer`** — гарантировать физическое удаление данных
+
+---
+
+🧬 **Заключение:** MVCC-база мощная, с правильными ключевыми блоками, но требуется детализация механизма видимости, управления цепочками и rollback.
 
