--- a/Conclusions/0x07.md
+++ b/Conclusions/0x07.md
@@ -1,1 +1,54 @@
+🔁 **Эксперт №7 — Инженер по транзакциям (ACID, Isolation, Rollback)**
+
+---
+
+### 🎯 Область ответственности:
+
+* Полнота ACID: атомарность, согласованность, изолированность, надёжность
+* Поддержка уровней изоляции: RC, RR, SI, SERIALIZABLE
+* Механизмы rollback, savepoint, commit
+* WAL + snapshot стратегия
+* Контроль конфликтов и блокировок
+
+---
+
+### ✅ Реализованные компоненты в `sap_hana_architecture_19.puml`:
+
+| Компонент                | Комментарий                                                               |
+| ------------------------ | ------------------------------------------------------------------------- |
+| `txn_manager`            | Центральный диспетчер транзакций, хорошее покрытие                        |
+| `mvcc_engine`            | Обеспечивает изоляцию через версионность — совместно с snapshot isolation |
+| `snapshot_manager`       | Позволяет фиксировать consistent view                                     |
+| `recovery_service`       | Обеспечивает надёжность при сбоях (Durability)                            |
+| `wal_log`, `buffer_pool` | Компоненты присутствуют, но слабые связи между ними                       |
+
+---
+
+### ⚠️ Обнаруженные недоработки:
+
+| Проблема                               | Обоснование                                                   |
+| -------------------------------------- | ------------------------------------------------------------- |
+| ❌ Нет `transaction_context` блока      | Не описана per-session структура транзакционного состояния    |
+| ❌ Отсутствует `isolation_controller`   | Не ясно, как переключаются или обеспечиваются уровни изоляции |
+| ❌ Нет `savepoint_manager`              | Для OLTP-нагрузки важно иметь промежуточные точки отката      |
+| ❌ WAL/Commit pipeline не детализирован | Отсутствует explicit блок commit log/flusher                  |
+| ❌ Нет `conflict_detector`              | Не представлена система борьбы с write-write конфликтами      |
+
+---
+
+### 💯 Оценка: **79 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `transaction_context`** — хранение статуса, уровня изоляции, active TxID на сессию
+2. **Ввести `isolation_controller`** — RC / RR / SI / SERIALIZABLE переключаемый механизм
+3. **Добавить `savepoint_manager`** — поддержка точек отката
+4. **Ввести `commit_pipeline`** — цепочка: WAL write → flush → visibility
+5. **Добавить `conflict_detector`** — write-write конфликтов и оптимистичная блокировка
+
+---
+
+🔁 **Заключение:** Архитектура транзакций достаточна для базовой ACID-гарантии, но требует расширения в сторону уровня изоляции, savepoints и управляемого rollback.
 
