--- a/Conclusions/0x08.md
+++ b/Conclusions/0x08.md
@@ -1,1 +1,53 @@
+🧾 **Эксперт №8 — Разработчик парсера SQL**
+
+---
+
+### 🎯 Область аудита:
+
+* Лексер и парсер SQL (ANSI:2011+)
+* Поддержка расширений: оконные функции, CTE, JSON, MERGE, LATERAL
+* AST (abstract syntax tree) генерация
+* Работа с кастомным DSL (если предусмотрено)
+* Интеграция с планировщиком запросов
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент                       | Комментарий                                                               |
+| ------------------------------- | ------------------------------------------------------------------------- |
+| `sql_parser`                    | Присутствует как отдельный блок — хорошая декомпозиция                    |
+| `sql_optimizer`, `sql_executor` | Обеспечивает следующий этап после разбора запроса                         |
+| `dsl_engine`                    | Поддержка DSL-языка для транзакций — уникальное расширение 👍             |
+| `plan_cache`                    | Актуально для повторного использования разобранных и скомпилированных SQL |
+
+---
+
+### ⚠️ Проблемы и слабые места:
+
+| Проблема                                | Обоснование                                                                |
+| --------------------------------------- | -------------------------------------------------------------------------- |
+| ❌ Нет `sql_lexer`                       | Отсутствует явный лексический анализатор, не выделен в архитектуре         |
+| ❌ `sql_parser` не связан с `dsl_engine` | Не видно общего фронтенда или координации парсинга                         |
+| ❌ Нет `syntax_tree_generator`           | AST — основа взаимодействия parser ↔ planner, но отсутствует в архитектуре |
+| ❌ Нет `error_reporter`                  | Не описано, как обрабатываются ошибки синтаксиса и лексики                 |
+| ❌ Нет `sql_extension_manager`           | Для поддержки MERGE, CTE, JSON-функций и т. д. нужна расширяемость         |
+
+---
+
+### 💯 Оценка: **76 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `sql_lexer`** — выделенный модуль для токенизации входных SQL-запросов
+2. **Ввести `syntax_tree_generator`** — AST как промежуточное представление
+3. **Добавить `sql_error_reporter`** — корректная обработка синтаксических и семантических ошибок
+4. **Связать `sql_parser` с `dsl_engine`** — общий входной шлюз запросов
+5. **Добавить `sql_extension_manager`** — для поддержки JSON, MATCH\_RECOGNIZE, WINDOW, CUBE, CTE
+
+---
+
+🧾 **Заключение:** Парсер покрывает базу, но нуждается в выделении фронтенда (лексер, AST, error-report), а также явной extensibility-схемы.
 
