--- a/Conclusions/0x09.md
+++ b/Conclusions/0x09.md
@@ -1,1 +1,54 @@
+📐 **Эксперт №9 — Разработчик планировщика запросов (Query Planner)**
+
+---
+
+### 🎯 Область аудита:
+
+* Оптимизация: cost-based, rule-based, adaptive
+* Построение и перебор плана: join reorder, cardinality estimates
+* Расширенная поддержка агрегатов, индексов, projection pushdown
+* Планирование для OLTP/OLAP, materialized views
+* Взаимодействие с execution engine, stats collector
+
+---
+
+### ✅ Реализовано в `sap_hana_architecture_19.puml`:
+
+| Компонент            | Комментарий                                                           |
+| -------------------- | --------------------------------------------------------------------- |
+| `sql_optimizer`      | Явно выделен, охватывает core functionality оптимизации               |
+| `plan_cache`         | Есть кэш планов — полезно для re-use в HTAP-нагрузках                 |
+| `jit_engine`         | Позволяет плану быть преобразованным в низкоуровневый исполняемый код |
+| `materialized_views` | Поддержка предварительных представлений — важно для OLAP              |
+| `sql_executor`       | Присутствует, значит planner не standalone, а часть конвейера         |
+
+---
+
+### ⚠️ Выявленные слабые места:
+
+| Проблема                        | Обоснование                                                      |
+| ------------------------------- | ---------------------------------------------------------------- |
+| ❌ Нет `plan_builder`            | Нет блока генерации логического/физического плана (tree → steps) |
+| ❌ Отсутствует `stats_collector` | Нет модуля оценки cardinality, selectivity, NDV                  |
+| ❌ Нет `rule_engine`             | Rule-based оптимизация, pushdown, projection pruning отсутствуют |
+| ❌ Не указан `adaptive_planner`  | Replanning на основе фидбека выполнения отсутствует              |
+| ❌ Нет `index_advisor`           | Автоматическая подсказка по созданию индексов не описана         |
+
+---
+
+### 💯 Оценка: **74 / 100**
+
+---
+
+### 🔧 Рекомендации по доработке:
+
+1. **Добавить `plan_builder`** — генерация логического и физического дерева выполнения
+2. **Ввести `stats_collector`** — сбор и хранение статистики (histogram, NDV, rowcount)
+3. **Добавить `rule_engine`** — трансформации плана: pushdown, filter merge, dedup
+4. **Добавить `adaptive_planner`** — корректировка плана на основе runtime статистики
+5. **Ввести `index_advisor`** — подсказка и оценка полезности потенциальных индексов
+
+---
+
+📐 **Вывод:** Планировщик есть, но недостаёт важнейших составляющих — статистики, rule engine, plan builder и адаптивности, характерных для SAP HANA и PostgreSQL.
 
