--- a/Conclusions/0x11.md
+++ b/Conclusions/0x11.md
@@ -1,1 +1,54 @@
+🔐 **Эксперт №11 — Эксперт по безопасности БД (Security: RBAC, TDE, TLS, SQL Injection и др.)**
+
+---
+
+### 🎯 Область аудита:
+
+* Аутентификация, авторизация (RBAC/ABAC)
+* Шифрование: TLS/mTLS, TDE (шифрование на уровне хранения)
+* Защита от SQL-инъекций
+* Политики безопасности: row-level, column-level
+* Аудит, журналирование доступа, лог-форензика
+
+---
+
+### ✅ Реализовано в архитектуре `sap_hana_architecture_19.puml`:
+
+| Компонент                     | Комментарий                                                   |
+| ----------------------------- | ------------------------------------------------------------- |
+| `security_manager`            | Центральный блок безопасности — 👍                            |
+| `access_policy_engine`        | Намекает на поддержку predicate security / row-level security |
+| `audit_logger`                | Предусмотрен компонент для журналирования действий            |
+| `rbac_engine`                 | Поддержка ролей и прав доступа заявлена                       |
+| `tls_endpoint`, `auth_engine` | TLS и механизм аутентификации в наличии                       |
+
+---
+
+### ⚠️ Недостатки и недостающие компоненты:
+
+| Проблема                                                               | Обоснование                                                          |
+| ---------------------------------------------------------------------- | -------------------------------------------------------------------- |
+| ❌ Нет `abac_engine`                                                    | Атрибутивный контроль доступа не представлен                         |
+| ❌ Нет `column_security_layer`                                          | Нет поддержки Column-level security (важно для BI/HR-сценариев)      |
+| ❌ Нет `tde_manager`                                                    | TDE (шифрование хранения на уровне страниц/файлов) отсутствует       |
+| ❌ Отсутствует `sql_firewall`                                           | Нет явного механизма защиты от SQL injection и вредоносных выражений |
+| ❌ `audit_logger` не связан с `rbac_engine`, `sql_executor`, `rest_api` | неясна полнота охвата аудитируемых действий                          |
+
+---
+
+### 💯 Оценка: **78 / 100**
+
+---
+
+### 🔧 Рекомендации по усилению безопасности:
+
+1. **Добавить `abac_engine`** — атрибутивный доступ по контексту (время, IP, тип данных и т.п.)
+2. **Добавить `column_security_layer`** — маскирование, ограничение колонок по ролям
+3. **Ввести `tde_manager`** — шифрование в rest: страниц, WAL, snapshot
+4. **Добавить `sql_firewall`** — защита от SQL-инъекций, в том числе в REST/GraphQL
+5. **Установить связи `audit_logger` ↔ `sql_executor`, `api_gateway`, `rbac_engine`**
+
+---
+
+🔐 **Заключение:** Основные блоки безопасности присутствуют, но архитектура не покрывает шифрование хранения, защиту от SQL-инъекций и fine-grained доступ. Нужно усиление для уровня SAP HANA.
 
