--- a/Conclusions/0x12.md
+++ b/Conclusions/0x12.md
@@ -1,1 +1,52 @@
+🧑‍💼 **Эксперт №12 — Разработчик системы прав и ролей (Access Control / Privilege Management)**
 
+---
+
+### 🎯 Зона ответственности:
+
+* Роли (RBAC): системные, пользовательские, вложенные
+* Политики: row-level, column-level, predicate-based
+* Атрибуты (ABAC): контекст, время, IP, группа
+* Динамическое ограничение доступа (SCOPES)
+* Применение к SQL, REST, GraphQL, Files, Procedures
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент              | Комментарий                                                           |
+| ---------------------- | --------------------------------------------------------------------- |
+| `rbac_engine`          | Базовая модель ролей присутствует                                     |
+| `access_policy_engine` | Указывает на поддержку row-level/predicate security — хороший признак |
+| `security_manager`     | Централизованная точка применения безопасности                        |
+| `audit_logger`         | Есть журналирование попыток доступа                                   |
+
+---
+
+### ⚠️ Найденные слабые места и пробелы:
+
+| Проблема                                                       | Обоснование                                                             |
+| -------------------------------------------------------------- | ----------------------------------------------------------------------- |
+| ❌ Нет `abac_policy_evaluator`                                  | Нет модуля, который интерпретирует ABAC-политики (время, IP, tag, load) |
+| ❌ Нет `scope_enforcer`                                         | В современном REST/gRPC нужно применять scoped-token ограничители       |
+| ❌ `access_policy_engine` не связан с `rest_api`, `graphql_api` | Неясно, как политики применяются вне SQL                                |
+| ❌ Нет `grant_manager`                                          | Не выделен блок, управляющий выдачей и отзывом прав                     |
+| ❌ Отсутствует `procedure_acl_manager`                          | Нужен отдельный ACL-контроллер на UDF/процедуры                         |
+
+---
+
+### 💯 Оценка: **77 / 100**
+
+---
+
+### 🔧 Что нужно добавить:
+
+1. **`abac_policy_evaluator`** — интерпретатор политик вида: "user.department == 'HR' AND time < 18:00"
+2. **`scope_enforcer`** — ограничители в стиле OAuth2 scopes: "data.read", "schema.alter"
+3. **`grant_manager`** — система грантов, возвратов, временных прав
+4. **`procedure_acl_manager`** — ACL-контроль вызова процедур, UDF, триггеров
+5. **Связать `access_policy_engine` ↔ `rest_api`, `graphql_api`, `web_ui`**
+
+---
+
+🧑‍💼 **Вывод:** Реализована только базовая RBAC + row-level security. Для достижения уровня HANA нужна full ABAC, scopes, granular контроллеры прав и интеграция с API.
