--- a/Conclusions/0x13.md
+++ b/Conclusions/0x13.md
@@ -1,1 +1,54 @@
+🛠 **Эксперт №13 — Инженер по управлению схемой (DDL, Schema Evolution, Online ALTER)**
+
+---
+
+### 🎯 Область аудита:
+
+* Поддержка всех DDL-операций: CREATE, DROP, ALTER, RENAME, TRUNCATE
+* Online schema evolution (без блокировок)
+* Совместимость версий, rollback, schema diff
+* SYSTEM VERSIONED таблицы
+* Интеграция с MVCC и планировщиком
+
+---
+
+### ✅ Обнаружено в `sap_hana_architecture_19.puml`:
+
+| Компонент            | Комментарий                                                                |
+| -------------------- | -------------------------------------------------------------------------- |
+| `ddl_engine`         | Выделен отдельно, отвечает за операции над схемой                          |
+| `catalog_manager`    | Центральный компонент метаданных, поддержка версии схем очевидна           |
+| `migration_engine`   | Указывает на возможность эволюции или миграции схем                        |
+| `schema_validator`   | Проверка целостности схемы при загрузке/изменении — присутствует           |
+| `as_of_query_engine` | Подразумевается, что есть поддержка SYSTEM VERSIONED / historical snapshot |
+
+---
+
+### ⚠️ Выявленные недочёты и пробелы:
+
+| Проблема                                 | Обоснование                                               |
+| ---------------------------------------- | --------------------------------------------------------- |
+| ❌ Нет `ddl_transaction_coordinator`      | Для гарантии атомарности DDL + MVCC нужен контроллер      |
+| ❌ Нет `schema_version_tracker`           | Не обозначено, как отслеживаются/возвращаются версии схем |
+| ❌ Нет `live_alter_executor`              | ALTER TABLE без блокировок требует спец-исполнителя       |
+| ❌ Нет `constraint_manager`               | Нет блока управления ограничениями: PK, FK, CHECK, UNIQUE |
+| ❌ `ddl_engine` не связан с `mvcc_engine` | Изменения в схеме должны отражаться в механизмах версий   |
+
+---
+
+### 💯 Оценка: **81 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `ddl_transaction_coordinator`** — последовательность операций в рамках одного MVCC snapshot
+2. **Ввести `schema_version_tracker`** — возможность отката схемы / история DDL
+3. **Добавить `live_alter_executor`** — модуль онлайн-изменения схемы без блокировок
+4. **Добавить `constraint_manager`** — управление всеми видами ограничений
+5. **Установить связи `ddl_engine` ↔ `mvcc_engine`, `plan_cache`, `recovery_service`**
+
+---
+
+🛠 **Заключение:** Основа для DDL присутствует, но нет механизмов, обеспечивающих online-изменения, constraint-validation и контроль версий схем. Без них нельзя гарантировать full availability.
 
