--- a/Conclusions/0x15.md
+++ b/Conclusions/0x15.md
@@ -1,1 +1,55 @@
+🔍 **Эксперт №15 — Инженер по наблюдаемости (Observability: Monitoring, Tracing, Logging, Profiling)**
+
+---
+
+### 🎯 Область анализа:
+
+* Метрики: Prometheus, OpenMetrics
+* Логирование: структурированное, syslog, бинарное, per-component
+* Трейсинг: OpenTelemetry, Jaeger, Zipkin
+* Профилировка: Flamegraphs, latency timeline, memory/cpu footprint
+* Поддержка алертов, интеграция с Alertmanager
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент          | Комментарий                                                             |
+| ------------------ | ----------------------------------------------------------------------- |
+| `monitoring_agent` | Центральный элемент для сбора метрик, уже присутствует                  |
+| `metrics_exporter` | Даёт сигнал о поддержке OpenMetrics/Prometheus                          |
+| `log_manager`      | Поддержка логирования имеется                                           |
+| `query_tracer`     | Отличный модуль — указывает на поддержку end-to-end tracing             |
+| `perf_profiler`    | Профилировка выполнения запросов на уровне движка                       |
+| `alert_dispatcher` | Есть подсистема для алертов — важный элемент операционной наблюдаемости |
+
+---
+
+### ⚠️ Недостающие элементы и проблемы:
+
+| Проблема                              | Обоснование                                                         |
+| ------------------------------------- | ------------------------------------------------------------------- |
+| ❌ Нет `trace_collector`               | Не указан сборщик трассировок на уровне компонентов                 |
+| ❌ Нет `structured_log_router`         | Не видно маршрутизации логов по каналам: stderr, syslog, файл, JSON |
+| ❌ Нет `dashboard_engine`              | UI/панель мониторинга не отражена в архитектуре                     |
+| ❌ Нет `metric_anomaly_detector`       | Нет анализа аномалий в метриках (например, latency spikes)          |
+| ❌ Отсутствует `log_retention_manager` | Не определены правила хранения/удаления логов                       |
+
+---
+
+### 💯 Оценка: **83 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `trace_collector`** — агрегатор трейсингов (OpenTelemetry/Jaeger)
+2. **Добавить `structured_log_router`** — маршрутизация логов по форматам и средам
+3. **Добавить `dashboard_engine`** — встраиваемая панель или плагин к Grafana
+4. **Ввести `metric_anomaly_detector`** — ML/эвристики для обнаружения отклонений
+5. **Добавить `log_retention_manager`** — управление ротацией и TTL логов
+
+---
+
+🔍 **Вывод:** Архитектура очень близка к полной Observability-системе, но нуждается в детализации trace/log management и интерфейсов наблюдения. Потенциал — высокий.
 
