--- a/Conclusions/0x16.md
+++ b/Conclusions/0x16.md
@@ -1,1 +1,55 @@
+🧯 **Эксперт №16 — Инженер отказоустойчивости (HA / DR, кластеризация, репликация, failover)**
+
+---
+
+### 🎯 Область анализа:
+
+* Репликация: синхронная/асинхронная, multi-region
+* Failover: active-passive / active-active
+* Consensus protocols: Raft / Paxos
+* Мониторинг здоровья узлов (watchdog, quorum, fencing)
+* Split-brain защита и disaster recovery (DR)
+
+---
+
+### ✅ Найдено в `sap_hana_architecture_19.puml`:
+
+| Компонент             | Комментарий                                               |
+| --------------------- | --------------------------------------------------------- |
+| `replication_engine`  | Центральный модуль для репликации — критически важный     |
+| `failover_controller` | Управляет переключением при сбоях                         |
+| `watchdog_service`    | Контроль доступности узлов и компонентов                  |
+| `raft_coordinator`    | Использование Raft-консенсуса — сильное место архитектуры |
+| `snapshot_engine`     | Поддержка DR через снапшоты отражена                      |
+| `recovery_service`    | Позволяет запускать восстановление после сбоя             |
+
+---
+
+### ⚠️ Недостатки и пробелы:
+
+| Проблема                    | Обоснование                                                              |
+| --------------------------- | ------------------------------------------------------------------------ |
+| ❌ Нет `fencing_service`     | Не отражена защита от split-brain (например, STONITH / fencing)          |
+| ❌ Нет `dr_planner`          | Отсутствует планировщик для DR-сценариев и failback                      |
+| ❌ Нет `replica_lag_monitor` | Мониторинг отставания реплик необходим для DR и адаптивной маршрутизации |
+| ❌ Нет `quorum_manager`      | Выбор кворума не явно реализован как отдельный компонент                 |
+| ❌ Нет `ha_test_injector`    | Нет средства эмуляции отказов / тестирования устойчивости системы        |
+
+---
+
+### 💯 Оценка: **84 / 100**
+
+---
+
+### 🔧 Рекомендации:
+
+1. **Добавить `fencing_service`** — предотвращение split-brain ситуаций
+2. **Ввести `dr_planner`** — сценарии DR: синхронизация, тест, план отката
+3. **Добавить `replica_lag_monitor`** — трекинг задержки репликации
+4. **Ввести `quorum_manager`** — управление голосованием и балансировкой консенсуса
+5. **Добавить `ha_test_injector`** — fault injection для CI/HA-тестов
+
+---
+
+🧯 **Вывод:** Архитектура надёжно покрывает HA/DR основы (репликация, failover, Raft), но для enterprise-grade уровня (SAP HANA+) нужны fencing, лаг-мониторинг и активная DR-стратегия.
 
